--- a/knjiznice/css/stil.css
+++ b/knjiznice/css/stil.css
@@ -3,6 +3,12 @@ body {
     background-color: #fff;
 }
 
+#secondPage {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
 .jumbotron {
     background-color: #fff;
     border-color: #eee;
@@ -19,4 +25,75 @@ body {
     background-color: #ffffff;
     border-radius: 3px;
     padding: 20px;
+}
+
+.col-md-4 {
+    border-right: 1px solid #eee;
+    height: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
+.name {
+    padding: 15px;
+}
+
+.firstDiv {
+    margin-left: -8px;
+    border-bottom: 1px solid #eee;
+    height: auto;
+    width: 100%;
+    display: block;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    overflow: auto;
+}
+
+.mainDiv {
+    padding: 15px 0px 15px 15px;
+    height: 100%;
+    border: 1px solid #eee;
+}
+
+.rightSide{
+    display: block;
+    height: 100%;
+    
+}
+
+.last {
+    border-right: 0;
+}
+
+#graphDiv {
+    margin-top: 20px;
+}
+
+#graphDiv rect{
+  fill: #4aaeea;
+}
+
+#graphDiv text{
+  fill: #333;
+  font: 10px sans-serif;
+  text-anchor: end; 
+}
+
+.axis text{
+  font: 10px sans-serif;
+}
+
+.axis path, .axis line{
+  fill: none;
+  stroke : #fff;
+  shape-rendering: crispEdges;
+}
+
+#zamenjajV {
+    float: right;
+    margin-right: 20px;
+}
+
+#contentDiv {
+    padding: 0px 15px;
 }
